--- a/templates/first_app/student_form.html
+++ b/templates/first_app/student_form.html
@@ -3,8 +3,8 @@
 
 {% block body_block %}
     
-<h1 class="p-4 bg-warning text-dark text-center mt-4">Student Form</h1>
-<form class="p-4 bg-dark text-white"action="" method="POST">
+<h1 class="p-4 bg-warning text-dark text-center mt-0">Student Form</h1>
+<form class="p-4 bg-dark text-white mt=0"action="" method="POST">
     {{ student_form.as_p }}
     {% csrf_token %}
 
